--- a/components/UI/singleWork/SingleWork.module.css
+++ b/components/UI/singleWork/SingleWork.module.css
@@ -16,7 +16,7 @@
   background-color: rgba(240, 248, 255, 0.807);
   border-radius: 20px 20px 0 0;
   transition: bottom 0.7s;
-  z-index: 99;
+  z-index: 10;
 }
 /* .workName{
   font-size: 20px;
@@ -64,7 +64,7 @@
   background-color: #ffffff7e;
   border-radius: 30px 0 0 30px;
   backdrop-filter: blur(3px);
-  z-index: 99;
+  z-index: 10;
 }
 
 .corner:hover {
